fix(theme): 컨텐츠 영역, 로고 수정
- 6xl -> 7xl 크기로 일부 수정
- 로고에 '블로그' 한글 추가
- scrollBar CSS 공통 수정

--- a/src/styles/notion.css
+++ b/src/styles/notion.css
@@ -140,5 +140,5 @@ pre[class*="language-"] {
 }
 /* 이미지 radius */
 .notion-asset-wrapper img {
-  border-radius: 10px;
+  border-radius: 18px;
 }
